k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: sk-team-03
  labels:
    name: sk-team-03
